--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -4,6 +4,7 @@
 -r requirements-apps-start-execution.txt
 -r requirements-apps-update-db.txt
 boto3==1.21.29
+botocore<1.24.30
 jinja2==3.1.1
 moto==1.3.14
 pytest==7.1.1
