Change number to integer for iterative bounds

--- a/job_spec/WATER_MAP_10M.yml
+++ b/job_spec/WATER_MAP_10M.yml
@@ -94,7 +94,7 @@ WATER_MAP:
         minItems: 2
         maxItems: 2
         items:
-          type: number
+          type: integer
   command:
     - ++process
     - water_map
