--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -70,7 +70,7 @@ WATER_MAP:
     flood_depth_estimator:
       api_schema:
         description: Flood depth estimation approach. Ignored when include_flood_depth is false.
-        default: 'nmad'
+        default: 'iterative'
         type: string
     water_level_sigma:
       api_schema:
