--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -113,15 +113,15 @@ WATER_MAP:
     - Ref::hand_fraction
     - --membership-threshold
     - Ref::membership_threshold
-    - --include_flood_depth
+    - --include-flood-depth
     - Ref::include_flood_depth
     - --estimator
     - Ref::flood_depth_estimator
-    - --water_level_sigma
+    - --water-level-sigma
     - Ref::water_level_sigma
-    - --known_water_threshold
+    - --known-water-threshold
     - Ref::known_water_threshold
-    - --iterative_bounds
+    - --iterative-bounds
     - Ref::iterative_bounds
     - Ref::granules
   validators:
