--- a/job_spec/WATER_MAP_10M.yml
+++ b/job_spec/WATER_MAP_10M.yml
@@ -83,16 +83,16 @@ WATER_MAP:
         description: Threshold for extracting known water area in percent. Ignored when include_flood_depth is false.
         default: 30.0
         type: number
-    iterative_bounds:
-      default: '0 15'
+    iterative_min:
       api_schema:
-        description: Bounds used for iterative method. Ignored when include_flood_depth is false.
-        type: array
-        default: [0, 15]
-        minItems: 2
-        maxItems: 2
-        items:
-          type: integer
+        description: Minimum bound used for iterative method. Ignored when include_flood_depth is false.
+        default: 0
+        type: number
+    iterative_max:
+      api_schema:
+        description: Maximum bound used for iterative method. Ignored when include_flood_depth is false.
+        default: 15
+        type: number
   command:
     - ++process
     - water_map
@@ -122,8 +122,10 @@ WATER_MAP:
     - Ref::water_level_sigma
     - --known-water-threshold
     - Ref::known_water_threshold
-    - --iterative-bounds
-    - Ref::iterative_bounds
+    - --iterative-min
+    - Ref::iterative_min
+    - --iteartive-max
+    - Ref::iterative_max
     - Ref::granules
   validators:
     - check_dem_coverage
