Simplify processing time API description

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -534,8 +534,8 @@ components:
     processing_time_in_seconds:
       description: >
         Run time in seconds for the final processing attempt (regardless of whether it succeeded). A value of zero
-        likely indicates that the job failed before reaching the processing step, although it may also indicate that the
-        job failed after reaching the processing step but before calculating the processing time.
+        indicates that the job failed before reaching the processing step or that there was an error in calculating
+        processing time.
       type: number
       minimum: 0
 
