--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -71,6 +71,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - run: |
+          python -m pip install --upgrade pip
+          make install
+          make render
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/python@master
         env:
