--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -83,7 +83,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
-          snyk test
+          snyk test --package-manager=pip --file=requirements*.txt
           snyk iac test
 
   call-secrets-analysis-workflow:
