specifically scan requirements-all.txt

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -83,7 +83,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
-          snyk test --package-manager=pip --file=requirements*.txt
+          snyk test --package-manager=pip --file=requirements-all.txt
           snyk iac test
 
   call-secrets-analysis-workflow:
