--- a/.github/workflows/deploy-daac.yml
+++ b/.github/workflows/deploy-daac.yml
@@ -52,7 +52,12 @@ jobs:
             product_lifetime_in_days: 14
             quota: 1000
             deploy_ref: refs/heads/develop
-            job_files: job_spec/AUTORIFT.yml job_spec/INSAR_GAMMA.yml job_spec/RTC_GAMMA.yml
+            job_files: >-
+              job_spec/AUTORIFT.yml
+              job_spec/INSAR_GAMMA.yml
+              job_spec/RTC_GAMMA.yml
+              job_spec/INSAR_ISCE.yml
+              job_spec/WATER_MAP.yml
             instance_types: r5d.xlarge,r5dn.xlarge
             default_max_vcpus: 600
             expanded_max_vcpus: 1600
