Allow updating subscription start

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -243,6 +243,8 @@ components:
       type: object
       additionalProperties: false
       properties:
+        start:
+          $ref: "#/components/schemas/datetime"
         end:
           $ref: "#/components/schemas/datetime"
         enabled:
