Allow updating subscription AOI

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -247,6 +247,9 @@ components:
           $ref: "#/components/schemas/datetime"
         end:
           $ref: "#/components/schemas/datetime"
+        intersectsWith:
+          type: string
+          format: wkt
         enabled:
           $ref: "#/components/schemas/subscription_enabled"
 
