--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -248,8 +248,7 @@ components:
         end:
           $ref: "#/components/schemas/datetime"
         intersectsWith:
-          type: string
-          format: wkt
+          $ref: "#/components/schemas/intersectsWith"
         enabled:
           $ref: "#/components/schemas/subscription_enabled"
 
@@ -363,8 +362,7 @@ components:
             enum:
               - IW
         intersectsWith:
-          type: string
-          format: wkt
+          $ref: "#/components/schemas/intersectsWith"
         frame:
           type: array
           minItems: 1
@@ -465,6 +463,11 @@ components:
       type: string
       format: date-time
       example: 2020-06-04T18:00:03+00:00
+
+    intersectsWith:
+      description: Area-of-interest as a WKT string.
+      type: string
+      format: wkt
 
     status_code:
       description: Status of a submitted job.
