--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -73,7 +73,7 @@ jobs:
             distribution_url: ''
 
           - environment: hyp3-test-enterprise
-            domain: TODO
+            domain: hyp3-test-enterprise.asf.alaska.edu
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
             image_tag: test
             product_lifetime_in_days: 14
