--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -78,6 +78,7 @@ jobs:
             image_tag: test
             product_lifetime_in_days: 14
             quota: 0
+            deploy_ref: refs/heads/develop
             job_files: >-
               job_spec/AUTORIFT.yml
               job_spec/INSAR_GAMMA.yml
