refactor workflow-cf.yml.j2 to create a job definition per task

--- a/job_spec/RIVER_WIDTH.yml
+++ b/job_spec/RIVER_WIDTH.yml
@@ -27,7 +27,7 @@ RIVER_WIDTH:
   validators:
     - check_dem_coverage
   tasks:
-    - name: water_map
+    - name: WATER_MAP
       image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/hyp3-gamma
       command:
         - ++process
@@ -42,7 +42,7 @@ RIVER_WIDTH:
       timeout: 36000
       vcpu: 1
       memory: 126000
-    - name: river_width
+    - name: RIVER_WIDTH
       image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/asfhyp3/riverwidthsar
       command:
         - --bucket
