Clean up job task naming

--- a/job_spec/RIVER_WIDTH.yml
+++ b/job_spec/RIVER_WIDTH.yml
@@ -42,7 +42,7 @@ RIVER_WIDTH:
       timeout: 36000
       vcpu: 1
       memory: 126000
-    - name: RIVER_WIDTH
+    - name: ''
       image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/asfhyp3/riverwidthsar
       command:
         - --bucket
