--- a/.github/workflows/deploy-enterprise-test.yml
+++ b/.github/workflows/deploy-enterprise-test.yml
@@ -25,6 +25,7 @@ jobs:
               job_spec/RTC_GAMMA.yml
               job_spec/INSAR_ISCE.yml
               job_spec/WATER_MAP.yml
+              job_spec/RIVER_WIDTH.yml
             instance_types: r5d.xlarge,r5dn.xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
