--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -108,7 +108,7 @@ jobs:
             image_tag: latest
             product_lifetime_in_days: 14
             quota: 0
-            job_files: job_spec/RTC_GAMMA_10M.yml job_spec/WATER_MAP_10M.yml
+            job_files: job_spec/RTC_GAMMA_10M.yml job_spec/WATER_MAP_10M.yml job_spec/RIVER_WIDTH.yml
             instance_types: r5d.4xlarge,r5dn.4xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
