--- a/job_spec/AUTORIFT_ITS_LIVE.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE.yml
@@ -31,18 +31,12 @@ AUTORIFT:
               minLength: 23
               maxLength: 25
               example: S2A_22WEB_20200627_0_L1C
-            - description: The name of the Landsat 7, 8 or 9 Collection 2 granule to process
+            - description: The name of the Landsat 4, 5, 7, 8 or 9 Collection 2 granule to process
               type: string
-              pattern: "^L[ECO]0[789]_"
+              pattern: "^L([CO]0[89]|E07|T0[45])_.*_T2"
               minLength: 40
               maxLength: 40
-              example: LC08_L1GT_118112_20210107_20210107_02_R
-            - description: The name of the Landsat 4 or 5 Collection 2 granule to process
-              type: string
-              pattern: "^L[TM]0[45]_"
-              minLength: 40
-              maxLength: 40
-              example: LM04_L1GS_025009_19830519_20200903_02_T2
+              example: LC08_L1GT_118112_20210107_20210107_02_T2
     bucket_prefix:
       default:  '""'
   validators: []
