--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -6,7 +6,7 @@
 -r requirements-apps-update-db.txt
 boto3==1.24.68
 jinja2==3.1.2
-moto==1.3.14
+moto[dynamodb]==4.0.2
 pytest==7.1.3
 PyYAML==6.0
 responses==0.21.0
