pin cryptography to 37.0.4 and ignore future dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,5 +11,6 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "moto"
+      - dependency-name: "cryptography"
     labels:
       - "bumpless"
