--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -117,6 +117,21 @@ jobs:
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
             distribution_url: ''
 
+          - environment: azdwr-hyp3
+            domain: azdwr-hyp3.asf.alaska.edu
+            template_bucket: cf-templates-xlga17noink6-us-west-2
+            image_tag: latest
+            product_lifetime_in_days: 30
+            quota: 0
+            job_files: job_spec/INSAR_GAMMA.yml
+            instance_types: r6id.xlarge,r5dn.xlarge
+            default_max_vcpus: 640
+            expanded_max_vcpus: 640
+            required_surplus: 0
+            security_environment: ASF
+            ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+            distribution_url: ''
+
     environment:
       name: ${{ matrix.environment }}
       url: https://${{ matrix.domain }}
