--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -18,7 +18,7 @@ jobs:
             image_tag: latest
             product_lifetime_in_days: 180
             quota: 0
-            job_files: job_spec/AUTORIFT_ITS_LIVE.yml
+            job_files: job_spec/AUTORIFT_ITS_LIVE.yml job_spec/AUTORIFT_ITS_LIVE_TEST.yml
             instance_types: r6id.xlarge,r5dn.xlarge
             default_max_vcpus: 10000
             expanded_max_vcpus: 10000
