add rds perms for deployment

--- a/docs/deployments/ASF-deployment-ci-cf.yml
+++ b/docs/deployments/ASF-deployment-ci-cf.yml
@@ -35,6 +35,7 @@ Resources:
                   - apigateway:*
                   - states:*
                   - dynamodb:*
+                  - rds:*
                   - cloudwatch:*
                   - sns:*
                   - secretsmanager:*
