set template bucket for hyp3-cargill deployment

--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -134,7 +134,7 @@ jobs:
 
           - environment: hyp3-cargill
             domain: hyp3-cargill.asf.alaska.edu
-            template_bucket: #TODO
+            template_bucket: cf-templates-j4kd746vpsuv-us-east-1
             image_tag: latest
             product_lifetime_in_days: 14
             quota: 0
