add decibel to the scale parameter

--- a/job_spec/RTC_GAMMA_10M.yml
+++ b/job_spec/RTC_GAMMA_10M.yml
@@ -53,10 +53,11 @@ RTC_GAMMA:
     scale:
       api_schema:
         default:  power
-        description: Scale of output image; either power or amplitude
+        description: Scale of output image; power, decibel or amplitude
         type: string
         enum:
           - power
+          - decibel
           - amplitude
     speckle_filter:
       api_schema:
