switch around dashes and underscores

--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -52,7 +52,7 @@ INSAR_ISCE:
         - Ref::granules
         - --secondary-scenes
         - Ref::secondary_granules
-        - --tropospheric_model
+        - --tropospheric-model
         - Ref::tropospheric_model
       timeout: 10800
       vcpu: 1
