--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -53,7 +53,7 @@ INSAR_ISCE_TEST:
         - Ref::granules
         - --secondary-scenes
         - Ref::secondary_granules
-        - --tropospheric_model
+        - --tropospheric-model
         - Ref::tropospheric_model
       timeout: 10800
       vcpu: 1
