--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -59,7 +59,7 @@ INSAR_ISCE_TEST:
       vcpu: 1
       memory: 7500
     - name: 'RAiDER'
-      image: ghcr.io/dbekaert/raider:latest
+      image: ghcr.io/dbekaert/raider #Specify image?
       command:
         - --bucket
         - '!Ref Bucket'
@@ -70,3 +70,5 @@ INSAR_ISCE_TEST:
       timeout: TODO
       vcpu: TODO
       memory: TODO
+
+      # TODO : how to pass in nc file name to raider?
