add in process calcdelaysgunw

--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -58,6 +58,8 @@ INSAR_ISCE:
     - name: TROPOSPHERE
       image: ghcr.io/dbekaert/raider
       command:
+        - ++process
+        - calcDelaysGunw
         - --bucket
         - '!Ref Bucket'
         - --bucket-prefix
