--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -60,6 +60,8 @@ INSAR_ISCE_TEST:
       image: ghcr.io/dbekaert/raider
       image_tag: test
       command:
+        - ++process
+        - calcDelaysGunw
         - --bucket
         - '!Ref Bucket'
         - --bucket-prefix
