Specify water map image in river width job spec
Co-authored-by: Joseph H Kennedy <me@jhkennedy.org>

--- a/job_spec/RIVER_WIDTH.yml
+++ b/job_spec/RIVER_WIDTH.yml
@@ -45,7 +45,7 @@ RIVER_WIDTH:
       vcpu: TODO
       memory: TODO
     - name: WATER_MAP
-      image: TODO
+      image: ghcr.io/asfhyp3/asf-tools
       command:
         - ++process
         - water_map
